--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe title="MNA Campaign"  src="https://app.powerbi.com/view?r=eyJrIjoiNjA3NzY5MGQtMmI5ZS00OGQ0LWE2NTYtMTBiNGU2YTdkNDRkIiwidCI6ImMxMjYzODVjLTBjYjUtNGVlNi05YTM2LTBkZjFhNjkyODE5MCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
+<iframe title="MNA Campaign" height="100%" width="100%" src="https://app.powerbi.com/view?r=eyJrIjoiNjA3NzY5MGQtMmI5ZS00OGQ0LWE2NTYtMTBiNGU2YTdkNDRkIiwidCI6ImMxMjYzODVjLTBjYjUtNGVlNi05YTM2LTBkZjFhNjkyODE5MCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
