--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe  height="100%" width="100%" src="https://app.powerbi.com/view?r=eyJrIjoiNjA3NzY5MGQtMmI5ZS00OGQ0LWE2NTYtMTBiNGU2YTdkNDRkIiwidCI6ImMxMjYzODVjLTBjYjUtNGVlNi05YTM2LTBkZjFhNjkyODE5MCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
+<iframe  width=100% height=100%  src="https://app.powerbi.com/view?r=eyJrIjoiNjA3NzY5MGQtMmI5ZS00OGQ0LWE2NTYtMTBiNGU2YTdkNDRkIiwidCI6ImMxMjYzODVjLTBjYjUtNGVlNi05YTM2LTBkZjFhNjkyODE5MCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
