--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe  width=100% height=100%   src="https://app.powerbi.com/reportEmbed?reportId=a3304d6b-7220-44f6-a9b9-2b8bf3615419&autoAuth=true&ctid=c126385c-0cb5-4ee6-9a36-0df1a6928190" frameborder="0" allowFullScreen="true"></iframe>
+<iframe  width=100% height=100%   
+  src="https://app.powerbi.com/view?r=eyJrIjoiZTM5NGM0YjItYTYyMC00MmQwLWFmMDAtNGJmMzU1ZGU1MTYyIiwidCI6ImMxMjYzODVjLTBjYjUtNGVlNi05YTM2LTBkZjFhNjkyODE5MCIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
